tests/rosetta/transpiler/CPP/currying.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:21:181: warning: multi-character character constant [-Wmultichar]
   21 |     else if(val.type() == typeid(std::vector<int64_t>)) { const auto& v = std::any_cast<const std::vector<int64_t>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                     ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:22:209: warning: multi-character character constant [-Wmultichar]
   22 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                 ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:22:295: warning: multi-character character constant [-Wmultichar]
   22 |     else if(val.type() == typeid(std::vector<std::vector<int64_t>>)) { const auto& vv = std::any_cast<const std::vector<std::vector<int64_t>>&>(val); os << '['; for(size_t i=0;i<vv.size();++i){ if(i>0) os << ', '; const auto& v = vv[i]; os << '['; for(size_t j=0;j<v.size();++j){ if(j>0) os << ', '; os << v[j]; } os << ']'; } os << ']'; }
      |                                                                                                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:23:189: warning: multi-character character constant [-Wmultichar]
   23 |     else if(val.type() == typeid(std::vector<std::string>)) { const auto& v = std::any_cast<const std::vector<std::string>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; os << v[i]; } os << ']'; }
      |                                                                                                                                                                                             ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:24:183: warning: multi-character character constant [-Wmultichar]
   24 |     else if(val.type() == typeid(std::vector<std::any>)) { const auto& v = std::any_cast<const std::vector<std::any>&>(val); os << '['; for(size_t i=0;i<v.size();++i){ if(i>0) os << ', '; any_to_stream(os, v[i]); } os << ']'; }
      |                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:25:215: warning: multi-character character constant [-Wmultichar]
   25 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                       ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:25:251: warning: multi-character character constant [-Wmultichar]
   25 |     else if(val.type() == typeid(std::map<std::string, std::any>)) { const auto& m = std::any_cast<const std::map<std::string, std::any>&>(val); os << '{'; bool first=true; for(const auto& p : m){ if(!first) os << ', '; first=false; os << p.first << ': '; any_to_stream(os, p.second); } os << '}'; }
      |                                                                                                                                                                                                                                                           ^~~~
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp: In lambda function:
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:110:79: error: ‘auto_Method’ was not declared in this scope; did you mean ‘Foo_Method’?
  110 |     std::function<int64_t(Foo, int64_t)> fn2 = [=](Foo f, int64_t b) { return auto_Method(f, b); };
      |                                                                               ^~~~~~~~~~~
      |                                                                               Foo_Method
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp: In function ‘int main()’:
/workspace/mochi/tests/rosetta/transpiler/CPP/currying.cpp:110:48: error: conversion from ‘main()::<lambda(Foo, int64_t)>’ to non-scalar type ‘std::function<long int(Foo, long int)>’ requested
  110 |     std::function<int64_t(Foo, int64_t)> fn2 = [=](Foo f, int64_t b) { return auto_Method(f, b); };
      |                                                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
